--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {margin: 0;
 padding: 0;
-box-sizing: border-box;}
+box-sizing: border-box;
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -29,7 +30,7 @@ nav ul li a {
 nav ul li a:hover{
     text-decoration: underline;
 }
-section div {
+section article {
     background: white;
     padding: 20px;
     margin-bottom: 20px;
@@ -69,11 +70,24 @@ footer{
     color: #777;
     font size: 14px;
 }
-#my_skills {
-padding: 30px;
-margin-left: 0px;
-text-align: left;
-}
 #skills {
-margin-left: 0px;
+    padding-top: 20px;
+    padding-left: 0%;
+    padding-bottom: 10px;
+  text-align: left;
+  margin-left: 0px; /* চাইলে কম-বেশি করো */
+  font-size: 24px;
+  color: #333;
 }
+#my_skills ul {
+  list-style-type: square; /* চাইলে circle / none ব্যবহার করো */
+  padding-left: 20px;
+  font-size: 18px;
+  color: #444;
+  line-height: 1.6;
+}
+
+#my_skills li {
+  margin-bottom: 8px;
+}
+
